--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1> Hello World </h1>
+<head>
+  <title> Profile Page </title>
+</head>
+
+<h2> Basics: </h2>
+<body>
+  <p1> Name: Sharandeep Kaur </p1>
+  <p2> Major: Information Technology </p2>
+  <p3> Concentration: Business Administration </p3>
+</body>
+  
