--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <h2> Basics: </h2>
 <body>
-  <p1> Name: Sharandeep Kaur </p1>
-  <p2> Major: Information Technology </p2>
-  <p3> Concentration: Business Administration </p3>
+  <p> Name: Sharandeep Kaur </p>
+  <p> Major: Information Technology </p>
+  <p> Concentration: Business Administration </p>
 </body>
   
