--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <title> Profile Page </title>
 </head>
-
+<h1> Profile Page </h2>
 <h2> Basics: </h2>
 <body>
   <p> Name: Sharandeep Kaur </p>
