--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <head>
   <title> Profile Page </title>
 </head>
+
 <h1> Profile Page </h2>
+
 <h2> Basics: </h2>
 <body>
+  <img src="https://www.123rf.com/photo_109815471_stock-vector-woman-avatar-profile-female-face-icon-vector-illustration-.html" width="50%">
   <p> Name: Sharandeep Kaur </p>
   <p> Major: Information Technology </p>
   <p> Concentration: Business Administration </p>
