--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <h2> Basics: </h2>
 <body>
-  <img src="https://www.fotosearch.com/CSP330/k29677526/" width="50%">
+  <img src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/" width="50%">
   <p> Name: Sharandeep Kaur </p>
   <p> Major: Information Technology </p>
   <p> Concentration: Business Administration </p>
