--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <p> Name: Sharandeep Kaur </p>
   <p> Major: Information Technology </p>
   <p> Concentration: Business Administration </p>
+  
+  <div>
+    <h2> Education: </h2>
+    <p> Currently Attending: St. John's University </p>
+    <p> Degree: Bachelors of Science in Information Technology </p>
+    <p> Graduation Date (Anticipated): May 2021 </p>
+    <p> GPA: 3.96> </p>
+  </div>
+  
 </body>
 
 
