--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
 
 
 <body>
-  <h2> Basics: </h2>
-  <img src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/" width="50%">
-  <p> Name: Sharandeep Kaur </p>
-  <p> Major: Information Technology </p>
-  <p> Concentration: Business Administration </p>
+  <div>
+    <h2> Basics: </h2>
+   <img src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/" width="50%">
+    <p> Name: Sharandeep Kaur </p>
+    <p> Major: Information Technology </p>
+    <p> Concentration: Business Administration </p>
+  </div>
   
   <div>
     <h2> Education: </h2>
     <p> Currently Attending: St. John's University </p>
     <p> Degree: Bachelors of Science in Information Technology </p>
     <p> Graduation Date (Anticipated): May 2021 </p>
-    <p> GPA: 3.96> </p>
+    <p> GPA: 3.96 </p>
+  </div>
+  
+  <div>
+    <h2> Work Experience/Internships: </h2>
+    <ul>
+      <li> Brown Brothers Harriman: Systems Intern; July 2020-August 2020 </li>
+      <li> Golub Capital: Data Entry Clerk; June 2019-April 2020 </li>
+      <li> ezTaxReturn: Tax Intern; December 2018-April 2019 </li>
+    </ul>
   </div>
   
 </body>
