--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
     </ul>
   </div>
   
+  <div>
+    <h2> Programming Skills </h2>
+    <p> I have taken various courses that have given me exposure to different programming languages. Examples include: </p>
+    <ol> 
+      <li> Java: Intermediate </li>
+      <li> SQL: Intermediate </li>
+      <li> Python: Beginner </li>
+      <li> HTML: Beginner </li>
+    </ol>
+  </div>
+  
 </body>
 
 
