--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
   
   <div>
-    <h2> Programming Skills </h2>
+    <h2> Programming Skills: </h2>
     <p> I have taken various courses that have given me exposure to different programming languages. Examples include: </p>
     <ol> 
       <li> Java: Intermediate </li>
@@ -40,6 +40,23 @@
       <li> Python: Beginner </li>
       <li> HTML: Beginner </li>
     </ol>
+  </div>
+  
+  <div>
+    <h2> General Interests: </h2>
+    <p> I love to travel and see new places. I love immersing myself into new cultures and learning more about different cultures. I love to try new foods, as well. Like everyone else, I also love binge watching horror movies and shows on Netflix. </p>
+  </div>
+  
+  <div>
+    <h2> Favorites: </h2>
+    <p> Favorite Song </p>
+    <video width="400" controls>
+      <source src="https://www.youtube.com/watch?v=450p7goxZqg" type="video/mp4">
+      <source src="https://www.youtube.com/watch?v=450p7goxZqg" type="video/ogg">
+      Your browser doesn't support HTML5 Videos.
+      
+    <p> Favorite Movie </p>
+    <p? Favorite TV Show </p>
   </div>
   
 </body>
