--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <source src="https://www.youtube.com/watch?v=450p7goxZqg" type="video/mp4">
       <source src="https://www.youtube.com/watch?v=450p7goxZqg" type="video/ogg">
       Your browser doesn't support HTML5 Videos.
+    </video>
       
     <p> Favorite Movie </p>
     <p? Favorite TV Show </p>
