--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
       <source src="https://www.youtube.com/watch?v=e5Vw_K9HX8o" type="video/mp4">
       Your browser doesn't support HTML5 Videos.
     </video>
-    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=e5Vw_K9HX8o">
+    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=e5Vw_K9HX8o" allow fullscreen autoplay>
     </iframe>
     
     <p> Favorite TV Show: Grey's Anatomy </p>
      <video width="400" controls>
-      <source src="https://www.netflix.com/watch/70247919?trackId=13752289&tctx=0%2C0%2Ccde55fbb95fe2df0856cac58b7d84c4a3d993069%3A8886010d9c736624a8c7c86ae9ad8ca8daa27fa2%2Ccde55fbb95fe2df0856cac58b7d84c4a3d993069%3A8886010d9c736624a8c7c86ae9ad8ca8daa27fa2%2C%2C" type="video/mp4">
-      <source src="https://www.netflix.com/watch/70247919?trackId=13752289&tctx=0%2C0%2Ccde55fbb95fe2df0856cac58b7d84c4a3d993069%3A8886010d9c736624a8c7c86ae9ad8ca8daa27fa2%2Ccde55fbb95fe2df0856cac58b7d84c4a3d993069%3A8886010d9c736624a8c7c86ae9ad8ca8daa27fa2%2C%2C" type="video/ogg">
+      <source src="https://www.youtube.com/watch?v=s-BcvFRY_aI&t=3s" type="video/mp4">
+      <source src="https://www.youtube.com/watch?v=s-BcvFRY_aI&t=3s" type="video/ogg">
       Your browser doesn't support HTML5 Videos.
     </video>
   </div>
