--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <source src="https://www.youtube.com/watch?v=e5Vw_K9HX8o" type="video/mp4">
       Your browser doesn't support HTML5 Videos.
     </video>
-    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=e5Vw_K9HX8o" allow fullscreen autoplay>
+    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=e5Vw_K9HX8o" allow autoplay>
     </iframe>
     
     <p> Favorite TV Show: Grey's Anatomy </p>
