--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
     </video>
   </div>
   
+  <div>
+    <h2> Favorite Website: </h2>
+    <a href="https://www.netflix.com/browse" Click here to visit Netflix.>
+    </a>
+  </div>
+  
+  
 </body>
 
 
