--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
   
   <div>
     <h2> Favorite Website: </h2>
-    <a href="https://www.netflix.com/browse" Click here to visit Netflix.>
-    </a>
+    <a href="https://www.netflix.com/browse"> Click here to visit Netflix. </a>
   </div>
   
   
