--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
     <a href="https://www.netflix.com/browse" target="_blank"> Click here to visit Netflix. </a>
   </div>
   
+  <div>
+    <h2> Menu Section </h2>
+  </div>
+  
+  
   
 </body>
 
