--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div>
     <h2> Basics: </h2>
-   <img src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/" width="50%">
+   <img src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/" width="75%" height="75%">
     <p> Name: Sharandeep Kaur </p>
     <p> Major: Information Technology </p>
     <p> Concentration: Business Administration </p>
