--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <div>
     <h2> Basics: </h2>
    <img src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/" width="75%" height="75%">
+     <a href="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/">
+         <img alt="profile" src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/"
+         width=150" height="70">
+      </a>
     <p> Name: Sharandeep Kaur </p>
     <p> Major: Information Technology </p>
     <p> Concentration: Business Administration </p>
