--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
   <div>
     <h2> Basics: </h2>
-   <img src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/" width="75%" height="75%">
-    <img src="avatar.jpg.png" width="75%" height="75%">
-     <a href="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/">
+   <img src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/.jpg" width="75%" height="75%">
+\     <a href="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/">
          <img alt="profile" src="https://pixabay.com/vectors/avatar-cartoon-comic-female-girl-2027367/"
          width=150" height="70">
       </a>
