--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <div>
     <h2> Favorites: </h2>
     <p> Favorite Song </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/450p7goxZqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <video width="400" controls>
       <source src="https://www.youtube.com/watch?v=450p7goxZqg" type="video/mp4">
       <source src="https://www.youtube.com/watch?v=450p7goxZqg" type="video/ogg">
