--- a/index.html
+++ b/index.html
@@ -53,27 +53,12 @@
     <h2> Favorites: </h2>
     <p> Favorite Song </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/450p7goxZqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <video width="400" controls>
-      <source src="https://www.youtube.com/watch?v=450p7goxZqg" type="video/mp4">
-      <source src="https://www.youtube.com/watch?v=450p7goxZqg" type="video/ogg">
-      Your browser doesn't support HTML5 Videos.
-    </video>
       
     <p> Favorite Movie </p>
-     <video width="400" controls>
-      <source src="https://www.youtube.com/watch?v=e5Vw_K9HX8o" type="video/mp4">
-      <source src="https://www.youtube.com/watch?v=e5Vw_K9HX8o" type="video/mp4">
-      Your browser doesn't support HTML5 Videos.
-    </video>
-    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=e5Vw_K9HX8o" allow autoplay>
-    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/e5Vw_K9HX8o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     <p> Favorite TV Show: Grey's Anatomy </p>
-     <video width="400" controls>
-      <source src="https://www.youtube.com/watch?v=s-BcvFRY_aI&t=3s" type="video/mp4">
-      <source src="https://www.youtube.com/watch?v=s-BcvFRY_aI&t=3s" type="video/ogg">
-      Your browser doesn't support HTML5 Videos.
-    </video>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/s-BcvFRY_aI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
   <div>
