--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   
   <div>
     <h2> Favorite Website: </h2>
+    <p> This website will take you to Netflix; it is what I use to watch movies and tv shows. </p>
     <a href="https://www.netflix.com/browse" target="_blank"> Click here to visit Netflix. </a>
   </div>
   
