--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
   </div>
   
   <div>
-    <h2> Favorite Website: </h2>
+    <h2> Favorite Websites: </h2>
     <p> This website will take you to Netflix; it is what I use to watch movies and tv shows. </p>
     <a href="https://www.netflix.com/browse" target="_blank"> Click here to visit Netflix. </a>
+    <p> This website is the link to a social media app that I use frequently. </p>
+    <a href="https://www.instagram.com" target="_blank"> Click here to visit Netflix. </a>
   </div>
   
   <div>
