--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <p> This website will take you to Netflix; it is what I use to watch movies and tv shows. </p>
     <a href="https://www.netflix.com/browse" target="_blank"> Click here to visit Netflix. </a>
     <p> This website is the link to a social media app that I use frequently. </p>
-    <a href="https://www.instagram.com" target="_blank"> Click here to visit Netflix. </a>
+    <a href="https://www.instagram.com" target="_blank"> Click here to visit Instagram. </a>
   </div>
   
   <div>
