--- a/index.html
+++ b/index.html
@@ -73,7 +73,14 @@
     <h2> Menu Section </h2>
   </div>
   
-  
+  <div>
+    <h2> My Projects in this Course: </h2>
+    <nav>
+      <ul>
+        <li> <a href="https://github.com/sharandeepkaur99/Milestone1/edit/master/index.html"> Go to my Profile Page for Milestone1. </a> </li>
+      </ul>
+    </nav>
+  </div>  
   
 </body>
                                                             
