--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h2> My Projects in this Course: </h2>
     <nav>
       <ul>
-        <li> <a href="https://github.com/sharandeepkaur99/Milestone1/edit/master/index.html"> Go to my Profile Page for Milestone1. </a> </li>
+        <li> <a href="https://sharandeepkaur99.github.io/Milestone1/" target="_blank"> Go to my Profile Page for Milestone1. </a> </li>
       </ul>
     </nav>
   </div>  
