--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h2> My Projects in this Course: </h2>
     <nav>
       <ul>
-        <li> <a href="https://sharandeepkaur99.github.io/Milestone1/" target="_blank"> Go to my Profile Page for Milestone1. </a> </li>
+        <li> The first project that we completed for CUS1172 was one in which we created an HTML page similar to our LinkedIn profiles. It included information about our education, work experience, skills and also interests. <a href="https://sharandeepkaur99.github.io/Milestone1/" target="_blank"> Go to my Profile Page for Milestone1. </a> </li>
       </ul>
     </nav>
   </div>  
