--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   
   <div>
     <h2> General Interests: </h2>
-    <p> I love to travel and see new places. I love immersing myself into new cultures and learning more about different cultures. I love to try new foods, as well. Like everyone else, I also love binge watching horror movies and shows on Netflix. </p>
+    <p> <span style="color:purple">I love to travel and see new places. I love immersing myself into new cultures and learning more about different cultures. I love to try new foods, as well. Like everyone else, I also love binge watching horror movies and shows on Netflix. </span></p>
   </div>
   
   <div>
@@ -77,7 +77,7 @@
     <h2> My Projects in this Course: </h2>
     <nav>
       <ul>
-        <li> The first project that we completed for CUS1172 was one in which we created an HTML page similar to our LinkedIn profiles. It included information about our education, work experience, skills and also interests. <a href="https://sharandeepkaur99.github.io/Milestone1/" target="_blank"> Go to my Profile Page for Milestone1. </a> </li>
+        <li> <span style="color:blue">The first project that we completed for CUS1172 was one in which we created an HTML page similar to our LinkedIn profiles. It included information about our education, work experience, skills and also interests. </span> <a href="https://sharandeepkaur99.github.io/Milestone1/" target="_blank"> Go to my Profile Page for Milestone1. </a> </li>
       </ul>
     </nav>
   </div>  
