--- a/index.html
+++ b/index.html
@@ -36,12 +36,28 @@
   <div>
     <h2><span style="color:blue"> Programming Skills: </span></h2>
     <p> I have taken various courses that have given me exposure to different programming languages. Examples include: </p>
-    <ol> 
-      <li> Java: Intermediate </li>
-      <li> SQL: Intermediate </li>
-      <li> Python: Beginner </li>
-      <li> HTML: Beginner </li>
-    </ol>
+    <table> 
+      <tr>
+        <th> Language </th>
+        <th> Proficiency </th>
+      </tr>
+      <tr>
+        <td> Java </td>
+        <td> Intermediate </td>
+      </tr>
+      <tr>
+        <td> SQL </td>
+        <td> Intermediate </td>
+      </tr>
+      <tr>
+        <td> Python </td>
+        <td> Beginner </td>
+      </tr>     
+      <tr>
+        <td> HTML </td>
+        <td> Beginner </td>
+      </tr>
+    </table>
   </div>
   
   <div>
