--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
   
   <div>
     <h2><span style="color:blue"> Menu Section </span></h2>
-    Click <a href="#Profile">here</a> to view the top of the Profile Page.
-    Click <a href="#Education">here</a> to view the section containing my education summary.
-    Click <a href="#Work">here</a> to view the section containing my work history.
-    Click <a href="#Skills">here</a> to view the section about my programming skills.
-    Click <a href="#Interests">here</a> to view the section about my interests.
-    Click <a href="#Favorites">here</a> to view the section with my favorite media.
-    Click <a href="#Websites">here</a> to view the section with links to my favorite websites..
-    Click <a href="#Index">here</a> to view the section that will allow you to navigate to different parts of my project.
+    <p>Click <a href="#Profile">here</a> to view the top of the Profile Page.</p>
+    <p>Click <a href="#Education">here</a> to view the section containing my education summary.</p>
+    <p>Click <a href="#Work">here</a> to view the section containing my work history.</p>
+    <p>Click <a href="#Skills">here</a> to view the section about my programming skills.</p>
+    <p>Click <a href="#Interests">here</a> to view the section about my interests.</p>
+    <p>Click <a href="#Favorites">here</a> to view the section with my favorite media.</p>
+    <p>Click <a href="#Websites">here</a> to view the section with links to my favorite websites.</p>
+    <p>Click <a href="#Index">here</a> to view the section that will allow you to navigate to different parts of my project.</p>
     
   </div>
   
