--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel=”stylesheet” href=”styling1.css”>
+  <link rel="stylesheet"href="styling1.css">
   <title> Profile Page </title>
 </head>
   <a name="Profile"></a>
