--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <li> Golub Capital: Data Entry Clerk; June 2019-April 2020 </li>
       <li> ezTaxReturn: Tax Intern; December 2018-April 2019 </li>
     </ul>
-  <div class="divs">
+  </div>
   
   <div class="divs">
     <a name="Skills"></a>
