--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet"href="styling1.css">
-  <link rel="stylesheet"href="css_style/Styling2.css">
+  <link rel="stylesheet"href="css_style/styling2.css">
   <title> Profile Page </title>
 </head>
   <a name="Profile"></a>
