--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
   <link rel="stylesheet"href="css_style/styling2.css">
   <title> Profile Page </title>
 </head>
+  
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+  
+ 
   <a name="Profile"></a>
-  <h1> Profile Page</h2> 
+  <h1> Profile Page</h1>
   
 
 
