--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+iframe { 
+       margin-left: auto;
+       margin-right: auto;
+}  
 </style>
   
  
