--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@ img {
   margin-right: auto;
 }
 iframe { 
-       margin-left: auto;
-       margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }  
 </style>
   
