--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+table {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+  
 iframe { 
   display: block;
   margin-left: auto;
