--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ iframe {
   <div class="divs">
     <a name="Interests"></a>
     <h2> General Interests: </h2>
-    <p> <span style="color:purple">I love to travel and see new places. I love immersing myself into new cultures and learning more about different cultures. I love to try new foods, as well. Like everyone else, I also love binge watching horror movies and shows on Netflix. </span></p>
+    <p> <span style="color:green">I love to travel and see new places. I love immersing myself into new cultures and learning more about different cultures. I love to try new foods, as well. Like everyone else, I also love binge watching horror movies and shows on Netflix. </span></p>
     <form>
       <input type="text" placeholder="What are some of your interests?" interest="interest_field">
       <input type="submit" value="submit">
