--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@ iframe {
   margin-left: auto;
   margin-right: auto;
 }  
+
+@media only screen and (max-width: 650px {
+  body {
+    background-color: #eae9e8;
+  }
+}
+
+@media only screen and (min-width: 651px {
+  body {
+    background-color: white;
+  }
+}
+  
 </style>
   
  
