--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ iframe {
   margin-right: auto;
 }  
 
-@media only screen and (max-width: 450px {
+@media only screen and (max-width: 450px) {
   body {
     background-color: white;
   }
 }
 
-@media only screen and (min-width: 451px {
+@media only screen and (min-width: 451px) {
   body {
     background-color: #eae9e8;
   }
