--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet"href="styling1.css">
   <link rel="stylesheet"href="css_style/styling2.css">
+  <link rel="stylesheet"href="css_style/styling3.css">
   <title> Profile Page </title>
 </head>
   
@@ -23,24 +24,6 @@ iframe {
   margin-left: auto;
   margin-right: auto;
 }  
-
-@media only screen and (max-width: 450px) {
-  body {
-    background-color: white;
-  }
-}
-
-@media only screen and (min-width: 451px) {
-  body {
-    background-color: #eae9e8;
-  }
-}
-  
-@media print {
-  body {
-    margin: 15px
-  }
-}
   
 </style>
   
