--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ iframe {
     <p>Click <a href="#Interests">here</a> to view the section about my interests.</p>
     <p>Click <a href="#Favorites">here</a> to view the section with my favorite media.</p>
     <p>Click <a href="#Websites">here</a> to view the section with links to my favorite websites.</p>
-    <p>Click <a href="#Index">here</a> to view the section that will allow you to navigate to different parts of my project.</p>
+    <p class="screenprint">Click <a href="#Index">here</a> to view the section that will allow you to navigate to different parts of my project.</p>
     
   </div>
   
