--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ iframe {
     <a name="Skills"></a>
     <h2> Programming Skills: </h2>
     <p> I have taken various courses that have given me exposure to different programming languages. Examples include: </p>
-    <table> 
+    <table class="dropdown"> 
       <tr>
         <th> Language </th>
         <th> Proficiency </th>
