--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ iframe {
     <a name="Skills"></a>
     <h2> Programming Skills: </h2>
     <p> I have taken various courses that have given me exposure to different programming languages. Examples include: </p>
-    <table class="dropdown"> 
+    <table> 
       <tr>
         <th> Language </th>
         <th> Proficiency </th>
@@ -103,13 +103,13 @@ iframe {
   <div>
   <a name="Favorites"></a>
     <h2> Favorites: </h2>
-    <p> Favorite Song </p>
+    <p class="dropdown"> Favorite Song </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/450p7goxZqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       
-    <p> Favorite Movie </p>
+    <p class="dropdown"> Favorite Movie </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/e5Vw_K9HX8o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
-    <p> Favorite TV Show: Grey's Anatomy </p>
+    <p class="dropdown"> Favorite TV Show: Grey's Anatomy </p>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/s-BcvFRY_aI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
