--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@ iframe {
       <input type="submit" value="submit">
   </div>
   
-  <div>
+  <div class="dropdown">
   <a name="Favorites"></a>
     <h2> Favorites: </h2>
-    <p class="dropdown"> Favorite Song </p>
+    <p> Favorite Song </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/450p7goxZqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       
-    <p class="dropdown"> Favorite Movie </p>
+    <p> Favorite Movie </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/e5Vw_K9HX8o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
-    <p class="dropdown"> Favorite TV Show: Grey's Anatomy </p>
+    <p> Favorite TV Show: Grey's Anatomy </p>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/s-BcvFRY_aI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
