--- a/index.html
+++ b/index.html
@@ -25,25 +25,6 @@ iframe {
   margin-right: auto;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-  
 </style>
   
  
@@ -141,7 +122,7 @@ iframe {
     <a href="https://www.instagram.com" target="_blank"> Click here to visit Instagram. </a>
   </div>
   
-  <div class="dropdown">
+  <div>
     <h2> Menu Section </h2>
     <p>Click <a href="#Profile">here</a> to view the top of the Profile Page.</p>
     <p>Click <a href="#Education">here</a> to view the section containing my education summary.</p>
