--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+  
+img {
+  opacity: 0.4;
+}
+
+img:hover {
+  opacity: 1.0;
+}
 
 table {
   margin-left: auto;
