--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ iframe {
     <p id="basics"> Concentration: Business Administration </p>
   </div>
   
-  <div>
+  <div class="education col-md-4">
     <a name="Education"></a>
     <h2> Education: </h2>
     <p> Currently Attending: St. John's University </p>
@@ -77,7 +77,7 @@ iframe {
     </ul>
   </div>
   
-  <div>
+  <div class="skills col-md-4">
     <a name="Skills"></a>
     <h2> Programming Skills: </h2>
     <p> I have taken various courses that have given me exposure to different programming languages. Examples include: </p>
@@ -114,7 +114,7 @@ iframe {
       <input type="submit" value="submit">
   </div>
   
-  <div>
+  <div class="favorite col-md-4">
   <a name="Favorites"></a>
     <h2> Favorites: </h2>
     <p> Favorite Song </p>
@@ -136,7 +136,7 @@ iframe {
     <a href="https://www.instagram.com" target="_blank"> Click here to visit Instagram. </a>
   </div>
   
-  <div>
+  <div class="menu col-md-4">
     <h2> Menu Section </h2>
     <p>Click <a href="#Profile">here</a> to view the top of the Profile Page.</p>
     <p>Click <a href="#Education">here</a> to view the section containing my education summary.</p>
