--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ iframe {
     </table>
   </div>
   
+  <div class="row">
   <div id="divs">
     <a name="Interests"></a>
     <h2> General Interests: </h2>
@@ -113,7 +114,9 @@ iframe {
       <input type="text" placeholder="What are some of your interests?" interest="interest_field">
       <input type="submit" value="submit">
   </div>
-  
+  </div>
+    
+  <div class="row">
   <div class="favorite1 col-md-4">
   <a name="Favorites"></a>
     <h2> Favorites: </h2>
@@ -138,6 +141,7 @@ iframe {
     <a href="https://www.netflix.com/browse" target="_blank"> Click here to visit Netflix. </a>
     <p> This website is the link to a social media app that I use frequently. </p>
     <a href="https://www.instagram.com" target="_blank"> Click here to visit Instagram. </a>
+  </div>
   </div>
   
   <div class="menu col-md-4">
