--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ iframe {
   </div>
     
   <div class="row">
-  <div class="favorite1 col-xs-4">
+  <div>
   <a name="Favorites"></a>
     <h2> Favorites: </h2>
     <p> Favorite Song </p>
