--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ iframe {
     <h2> My Projects in this Course: </h2>
     <nav>
       <ol>
-        <li> <span style="color:#5610a0">The first project that we completed for CUS1172 was one in which we created an HTML page similar to our LinkedIn profiles. It included information about our education, work experience, skills and also interests. </span> <a href="https://sharandeepkaur99.github.io/Milestone1/" target="_blank"> Go to my Profile Page for Milestone1. </a> </li>
+        <li> <span style="color:#5610a0">The first project that we completed for CUS1172 was one in which we created an HTML page similar to our LinkedIn profiles. It included information about our education, work experience, skills and also interests. The orginal page's content was built using HTML, and now the webpage is also styled using CSS and Bootstrap. </span> <a href="https://sharandeepkaur99.github.io/Milestone1/" target="_blank"> Go to my Profile Page for Milestone1. </a> </li>
       </ol>
     </nav>
   </div>  
