--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@ iframe {
   <div class="interests col-md-6" id="divs">
     <a name="Interests"></a>
     <h2> General Interests: </h2>
+    <blockquote>
     <p> <span style="color:green">I love to travel and see new places. I love immersing myself into new cultures and learning more about different cultures. I love to try new foods, as well. Like everyone else, I also love binge watching horror movies and shows on Netflix. </span></p>
+      <footer>Sharandeep Kaur</footer>
+    </blockquote>
     <form>
       <input type="text" placeholder="What are some of your interests?" interest="interest_field">
       <input type="submit" value="submit">
