--- a/index.html
+++ b/index.html
@@ -81,27 +81,31 @@ iframe {
     <a name="Skills"></a>
     <h2> Programming Skills: </h2>
     <p> I have taken various courses that have given me exposure to different programming languages. Examples include: </p>
-    <table> 
+    <table class="table">
+      <thead>
       <tr>
         <th> Language </th>
         <th> Proficiency </th>
       </tr>
-      <tr>
+    </thead>
+      <tbody>
+      <tr class="info">
         <td> Java </td>
         <td> Intermediate </td>
       </tr>
-      <tr>
+      <tr class="warning">
         <td> SQL </td>
         <td> Intermediate </td>
       </tr>
-      <tr>
+      <tr class="info">
         <td> Python </td>
         <td> Beginner </td>
       </tr>     
-      <tr>
+      <tr class="warning">
         <td> HTML </td>
         <td> Beginner </td>
       </tr>
+      </tbody>
     </table>
   </div>
   
