--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ iframe {
     <p> I have taken various courses that have given me exposure to different programming languages. Examples include: </p>
     <table class="table">
       <thead>
-      <tr>
+      <tr class="warning">
         <th> Language </th>
         <th> Proficiency </th>
       </tr>
