--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ iframe {
   
  
   <a name="Profile"></a>
+  <div class="page-header">
   <h1> Profile Page</h1>
-  
-
+  </div>
 
 <body>
   <div id="divs">
