--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@ iframe {
   </div>
   </div>
   
-  <div class="menu col-md-6">
+  <div class="btn-group btn-group-justified">
     <h2> Menu Section </h2>
-    <p>Click <a href="#Profile">here</a> to view the top of the Profile Page.</p>
-    <p>Click <a href="#Education">here</a> to view the section containing my education summary.</p>
-    <p>Click <a href="#Work">here</a> to view the section containing my work history.</p>
-    <p>Click <a href="#Skills">here</a> to view the section about my programming skills.</p>
-    <p>Click <a href="#Interests">here</a> to view the section about my interests.</p>
-    <p>Click <a href="#Favorites">here</a> to view the section with my favorite media.</p>
-    <p>Click <a href="#Websites">here</a> to view the section with links to my favorite websites.</p>
-    <p class="screenprint">Click <a href="#Index">here</a> to view the section that will allow you to navigate to different parts of my project.</p>
+    <p>Click <a href="#Profile" class="btn btn-primary">here</a> to view the top of the Profile Page.</p>
+    <p>Click <a href="#Education" class="btn btn-primary">here</a> to view the section containing my education summary.</p>
+    <p>Click <a href="#Work" class="btn btn-primary">here</a> to view the section containing my work history.</p>
+    <p>Click <a href="#Skills" class="btn btn-primary">here</a> to view the section about my programming skills.</p>
+    <p>Click <a href="#Interests" class="btn btn-primary">here</a> to view the section about my interests.</p>
+    <p>Click <a href="#Favorites" class="btn btn-primary">here</a> to view the section with my favorite media.</p>
+    <p>Click <a href="#Websites" class="btn btn-primary">here</a> to view the section with links to my favorite websites.</p>
+    <p class="screenprint">Click <a href="#Index" class="btn btn-primary">here</a> to view the section that will allow you to navigate to different parts of my project.</p>
     
   </div>
   
