--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@ iframe {
   </div>
   </div>
   
-  <div class="btn-group btn-group-justified">
+  <div> 
     <h2> Menu Section </h2>
+    
+    <div class="btn-group btn-group-justified">
     <a href="#Profile" class="btn btn-primary">here</a>
     <a href="#Education" class="btn btn-primary">here</a>
     <a href="#Work" class="btn btn-primary">here</a>
@@ -174,6 +176,7 @@ iframe {
     <p class="screenprint">Click <a href="#Index" class="btn btn-primary">here</a> to view the section that will allow you to navigate to different parts of my project.</p>
     -->
   </div>
+  </div> 
   
   <div id="divs">
     <a name="Index"></a>
