--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ iframe {
   </div>
   
 
-<body>
+<body style="background-color:grey;>
     
     <div class="btn-group btn-group-justified">
     <a href="#Profile" class="btn btn-basic">Profile</a>
