--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@ iframe {
     <p> <span style="color:green">I love to travel and see new places. I love immersing myself into new cultures and learning more about different cultures. I love to try new foods, as well. Like everyone else, I also love binge watching horror movies and shows on Netflix. </span></p>
       <footer>Sharandeep Kaur</footer>
     </blockquote>
-    <form>
-      <input type="text" placeholder="What are some of your interests?" interest="interest_field">
-      <input type="submit" value="submit">
+    <div class="form-group">
+        <label for="input"> What are some of your interests? </label>
+        <textarea class="form-control" rows="4" id="input"></textarea>
   </div>
+                                         
   <div class="websites col-md-6" id="divs">
     <a name="Websites"></a>
     <h2> Favorite Websites: </h2>
