--- a/index.html
+++ b/index.html
@@ -143,9 +143,11 @@ iframe {
     <p> <span style="color:green">I love to travel and see new places. I love immersing myself into new cultures and learning more about different cultures. I love to try new foods, as well. Like everyone else, I also love binge watching horror movies and shows on Netflix. </span></p>
       <footer>Sharandeep Kaur</footer>
     </blockquote>
+    <form>                             
     <div class="form-group">
         <label for="input"> What are some of your interests? </label>
         <textarea class="form-control" rows="4" id="input"></textarea>
+    </form>                                                     
   </div>
                                          
   <div class="websites col-md-6" id="divs">
