--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ iframe {
     <p> This website will take you to Netflix; it is what I use to watch movies and tv shows. </p>
     <a href="https://www.netflix.com/browse" target="_blank"> Click here to visit Netflix. </a>
     <p> This website is the link to a social media app that I use frequently. Share it to connect with your friends!
-    <a href="https://www.instagram.com" target="_blank"> 
-   <span class="glyphicon glyphicon-share-alt"></span> 
+    <a href="https://www.instagram.com"> 
+      <span class="glyphicon glyphicon-share-alt"></span> 
     </a>
     </p>
   </div>
