--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ iframe {
         <textarea class="form-control" rows="4" id="input"></textarea>
     </form>                                                     
   </div>
+  </div>                                                        
                                          
   <div class="websites col-md-6" id="divs">
     <a name="Websites"></a>
