--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@ iframe {
   </ul>
   <form id="new-task">
     <input id="task" autocomplete="off" autofocus placeholder="Task Title" type="text">
-    <input id="submit" type="submit">
     
-    <input id="task-status" autocomplete="off" autofocus placeholder="Task Status" type="radio">                                
+    <label for="radio">Choose the current status:</label>    
     <input type="radio" name="status" value="completed"> Completed <br>
     <input type="radio" name="status" value="in the process"> In the Process<br>
     <input type="radio" name="status" value="unknown"> Unknown
+                                                     
     <input id="submit" type="submit">                                                 
   </form>
 
