--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet"href="styling1.css">
   <link rel="stylesheet"href="css_style/styling2.css">
   <link rel="stylesheet"href="css_style/styling3.css">
+  <link rel="stylesheet"href="Assignment2/cssforjs.css">
 
   <script src="javascript1.js">
   </script>
