--- a/Assignment2/index2.html
+++ b/Assignment2/index2.html
@@ -25,8 +25,7 @@
     <label for="radio">Choose the current status:</label>    
                       <p></p>                  
     <input type="radio" name="status" value="completed"> Completed <br>
-    <input type="radio" name="status" value="in the process"> In the Process<br>
-    <input type="radio" name="status" value="unknown"> Unknown
+    <input type="radio" name="status" value="pending"> Pending <br>
                                                                                                     
   </form>
 
