--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@ iframe {
     <label for="radio">Choose the current status:</label>    
                       <p></p>                  
     <input type="radio" name="status" value="completed"> Completed <br>
-    <input type="radio" name="status" value="in the process"> In the Process<br>
-    <input type="radio" name="status" value="unknown"> Unknown
+    <input type="radio" name="status" value="pending"> Pending <br>
                                                                                                     
   </form>
 
